force-app/main/default/objects/Protection_Case__c/Protection_Case__c.object-meta.xml
<CustomObject>
    <label>Protection Case</label>
    <nameField>
        <label>Protection Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protection Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>