force-app/main/default/objects/Protection_Case__c/fields/Critical_Illness_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness_Cover_Amount__c</fullName>
    <label>Critical Illness Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>