force-app/main/default/objects/Protection_Case__c/fields/Critical_Illness_Premium_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness_Premium_Level_Type__c</fullName>
    <label>Critical Illness Premium Level Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>No Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>