force-app/main/default/objects/Protection_Case__c/fields/Critical_Illness_Term__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness_Term__c</fullName>
    <label>Critical Illness Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>