force-app/main/default/objects/Protection_Case__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Protection Cases</relationshipLabel>
    <relationshipName>Protection_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>