force-app/main/default/objects/Protection_Case__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment</label>
    <referenceTo>Employment__c</referenceTo>
    <relationshipLabel>Protection Cases</relationshipLabel>
    <relationshipName>Protection_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>