force-app/main/default/objects/Protection_Case__c/fields/F_I_P_Life_Or_Illness_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>F_I_P_Life_Or_Illness_Cover_Amount__c</fullName>
    <inlineHelpText>Family Income Protection Life Or Illness Cover Amount</inlineHelpText>
    <label>F.I.P Life Or Illness Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>