force-app/main/default/objects/Protection_Case__c/fields/F_Income_Protection_Waiver_Of_Premium__c.field-meta.xml
<CustomField>
    <fullName>F_Income_Protection_Waiver_Of_Premium__c</fullName>
    <inlineHelpText>Family Income Protection Waiver Of Premium</inlineHelpText>
    <label>F. Income Protection Waiver Of Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Life</fullName>
            </value>
            <value>
                <fullName>Second Life</fullName>
            </value>
            <value>
                <fullName>Both Lives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>