force-app/main/default/objects/Protection_Case__c/fields/Family_Income_Protection__c.field-meta.xml
<CustomField>
    <fullName>Family_Income_Protection__c</fullName>
    <label>Family Income Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Life</fullName>
            </value>
            <value>
                <fullName>Second Life</fullName>
            </value>
            <value>
                <fullName>Both Lives</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>