force-app/main/default/objects/Protection_Case__c/fields/Family_Income_Protection_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Family_Income_Protection_Cover_Amount__c</fullName>
    <label>Family Income Protection Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>