force-app/main/default/objects/Protection_Case__c/fields/Family_Income_Protection_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Family_Income_Protection_Premium_Amount__c</fullName>
    <inlineHelpText>Family Income Protection Premium Amount</inlineHelpText>
    <label>Family Income Protection Premium Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>