force-app/main/default/objects/Protection_Case__c/fields/Family_Income_Protection_Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Income_Protection_Premium_Type__c</fullName>
    <label>Family Income Protection Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Reviewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>