force-app/main/default/objects/Protection_Case__c/fields/Family_Income_Protection_Term__c.field-meta.xml
<CustomField>
    <fullName>Family_Income_Protection_Term__c</fullName>
    <label>Family Income Protection Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>