force-app/main/default/objects/Protection_Case__c/fields/First_Life_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Life_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Life Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protection Cases</relationshipLabel>
    <relationshipName>Protection_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>