force-app/main/default/objects/Protection_Case__c/fields/I_Protection_Second_Life_Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_Protection_Second_Life_Benefit_Amount__c</fullName>
    <inlineHelpText>Income Protection Second Life Benefit Amount</inlineHelpText>
    <label>I Protection Second Life Benefit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>