force-app/main/default/objects/Protection_Case__c/fields/Income_Protection_Benefit_Basis__c.field-meta.xml
<CustomField>
    <fullName>Income_Protection_Benefit_Basis__c</fullName>
    <label>Income Protection Benefit Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>