force-app/main/default/objects/Protection_Case__c/fields/Income_Protection_Deferred_Period__c.field-meta.xml
<CustomField>
    <fullName>Income_Protection_Deferred_Period__c</fullName>
    <label>Income Protection Deferred Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero</fullName>
            </value>
            <value>
                <fullName>OneWeek</fullName>
            </value>
            <value>
                <fullName>TwoWeeks</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Twelve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>