force-app/main/default/objects/Protection_Case__c/fields/Income_Protection_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Income_Protection_Indexation__c</fullName>
    <label>Income Protection Indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level</fullName>
            </value>
            <value>
                <fullName>RPI</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>