force-app/main/default/objects/Protection_Case__c/fields/Income_Protection_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Protection_Premium_Amount__c</fullName>
    <label>Income Protection Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>