force-app/main/default/objects/Protection_Case__c/fields/Income_Protection_To_Age__c.field-meta.xml
<CustomField>
    <fullName>Income_Protection_To_Age__c</fullName>
    <label>Income Protection To Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>