force-app/main/default/objects/Protection_Case__c/fields/IP_Include_Limited_Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>IP_Include_Limited_Payment_Plans__c</fullName>
    <inlineHelpText>Income Protection Include Limited Payment Plans</inlineHelpText>
    <label>IP Include Limited Payment Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>