force-app/main/default/objects/Protection_Case__c/fields/L_Insurance_Decreasing_Term_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>L_Insurance_Decreasing_Term_Cover_Amount__c</fullName>
    <inlineHelpText>Life Insurance Decreasing Term Cover Amount</inlineHelpText>
    <label>L.Insurance Decreasing Term Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>