force-app/main/default/objects/Protection_Case__c/fields/LI_Decreasing_Term_Policy_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LI_Decreasing_Term_Policy_Interest_Rate__c</fullName>
    <inlineHelpText>Life insurance Decreasing Term Policy Interest Rate</inlineHelpText>
    <label>LI Decreasing Term Policy Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>