force-app/main/default/objects/Protection_Case__c/fields/LI_Decreasing_Term_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>LI_Decreasing_Term_Premium_Amount__c</fullName>
    <inlineHelpText>Life Insurance Decreasing Term Premium Amount</inlineHelpText>
    <label>LI Decreasing Term Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>