force-app/main/default/objects/Protection_Case__c/fields/LI_Decreasing_Term_Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>LI_Decreasing_Term_Premium_Type__c</fullName>
    <inlineHelpText>Life Insurance Decreasing Term Premium Type</inlineHelpText>
    <label>LI Decreasing Term Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Reviewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>