force-app/main/default/objects/Protection_Case__c/fields/LI_Level_Cover_Premium_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>LI_Level_Cover_Premium_Level_Type__c</fullName>
    <inlineHelpText>Life Insurance Level Cover Premium Level Type</inlineHelpText>
    <label>LI Level Cover Premium Level Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>No Premium</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>