force-app/main/default/objects/Protection_Case__c/fields/Life_Insurance_Level_Cover__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Level_Cover__c</fullName>
    <label>Life Insurance Level Cover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Life</fullName>
            </value>
            <value>
                <fullName>Second Life</fullName>
            </value>
            <value>
                <fullName>Both Lives</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>