force-app/main/default/objects/Protection_Case__c/fields/Life_Insurance_Level_Cover_Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Level_Cover_Premium_Type__c</fullName>
    <label>Life Insurance Level Cover Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
                <default>true</default>
                <label>Guaranteed</label>
            </value>
            <value>
                <fullName>Reviewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>