force-app/main/default/objects/Protection_Case__c/fields/Life_Insurance_Level_Cover_Term__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Level_Cover_Term__c</fullName>
    <label>Life Insurance Level Cover Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>