force-app/main/default/objects/Protection_Case__c/fields/Life_Insurance_Level_Life_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Level_Life_Cover_Amount__c</fullName>
    <label>Life Insurance Level Life Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>