force-app/main/default/objects/Protection_Case__c/fields/Life_Insurance_Level_Waiver_Of_Premium__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Level_Waiver_Of_Premium__c</fullName>
    <label>Life Insurance Level Waiver Of Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Life</fullName>
            </value>
            <value>
                <fullName>Second Life</fullName>
            </value>
            <value>
                <fullName>Both Lives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>