force-app/main/default/objects/Protection_Case__c/fields/LIL_Life_Or_Earlier_Illness_Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>LIL_Life_Or_Earlier_Illness_Cover_Amount__c</fullName>
    <inlineHelpText>Life Insurance Level Life Or Earlier Illness Cover Amount</inlineHelpText>
    <label>LIL Life Or Earlier Illness Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>