force-app/main/default/objects/Protection_Case__c/fields/LInsurance_Decreasing_Waiver_Or_Premium__c.field-meta.xml
<CustomField>
    <fullName>LInsurance_Decreasing_Waiver_Or_Premium__c</fullName>
    <inlineHelpText>Life Insurance Decreasing Waiver Or Premium</inlineHelpText>
    <label>LInsurance Decreasing Waiver Or Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Life</fullName>
            </value>
            <value>
                <fullName>Second Life</fullName>
            </value>
            <value>
                <fullName>Both Lives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>