force-app/main/default/objects/Protection_Case__c/fields/LInsurance_Level_Cover_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>LInsurance_Level_Cover_Premium_Amount__c</fullName>
    <inlineHelpText>Life Insurance Level Cover Premium Amount</inlineHelpText>
    <label>L.Insurance Level Cover Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>