force-app/main/default/objects/Protection_Case__c/fields/Previous_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Address</label>
    <referenceTo>Previous_Address__c</referenceTo>
    <relationshipLabel>Protection Cases</relationshipLabel>
    <relationshipName>Protection_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>