force-app/main/default/objects/Protection_Case__c/fields/Protection_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Protection_Case_Id__c</fullName>
    <description>Case Id generated in the MW</description>
    <label>Protection Case Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>