force-app/main/default/objects/Protection_Case__c/fields/Second_Life_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Life_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Life Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protection Cases (Second Life Contact)</relationshipLabel>
    <relationshipName>Second_Life_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>